Fix sun z-index

--- a/system_project/system.css
+++ b/system_project/system.css
@@ -90,5 +90,5 @@ model-viewer{
     position:absolute;
     left: calc(50vw-400px);
     bottom:-350px;
-    z-index: 0;
+    z-index: 10;
 }
